# faster-whisper-dictation

./: .clinerules  .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  com.user.dictation.plist  dictation-autostart.desktop  dictation.py  dictation.service  main.py  memory_monitor.py  pyproject.toml  requirements.txt  restart_dictation.sh  revert_setup.sh  run.sh  setup.sh  test_memory_fix.sh
.cursor/rules/: cursor-tools.mdc  memory-bank.mdc
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
ai-docs/: improvement_plan_api_error_handling.md  improvement_plan_asset_packaging.md  improvement_plan_configurable_typing_delay.md  improvement_plan_constants.md  improvement_plan_flexible_paths.md  improvement_plan_graceful_shutdown.md  improvement_plan_optional_dependencies.md  improvement_plan_simplify_platformhandler.md  improvement_plan_uinput_group_clarification.md
memory-bank/: active-context.md  decisionLog.md  product-context.md  productContext.md  progress.md  project-brief.md  system-patterns.md  systemPatterns.md  tech-context.md
src/: cli.py
src/core/: app.py  config.py  constants.py  state_machine.py  utils.py
src/services/: input_handler.py  keyboard_controller_factory.py  recorder.py  status_indicator.py  transcriber.py  uinput_controller.py
tasks/: efficient_keyboard_replay.md  prd-wayland-migration.md  robust_error_handling.md  tasks-prd-wayland-migration.md  voice_command_for_control.md
