[project]
name = "faster-whisper-dictation"
version = "0.2.0"
description = "A lightweight, key-activated dictation service using local or cloud-based transcription."
requires-python = ">=3.8"
dependencies = [
    "pynput>=1.7.8",
    "PyGObject==3.50.0; platform_system == 'Linux'",
    "keyboard",
    "argparse",
    "transitions",
    "numpy",
    "sounddevice",
    "soundfile",
    "pystray",
    "webrtcvad; platform_system != 'Windows'",
    "aiohttp",
    "faster-whisper",
]

[project.optional-dependencies]
dev = [
    "psutil",
    "matplotlib",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", ".git", "__pycache__"]
format = { indent-style = "space", quote-style = "double" }

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Allow long lines
unfixable = ["B", "UP"]